Fix swagger description and add RetrofitHelper and StandingsApi classes
