# swagger.json
@@ -33,7 +33,7 @@
           "200": {
             "description": "successful operation",
             "schema": {
-              "$ref": "#/definitions/Response"
+              "$ref": "#/definitions/StandingsResponse"
             }
           }
         }
@@ -41,7 +41,7 @@
     }
   },
   "definitions": {
-    "Response": {
+    "StandingsResponse": {
       "type": "object",
       "properties": {
         "status": {
